Added uninstall feature and updated gem version and README file

--- a/README
+++ b/README
@@ -21,6 +21,7 @@ forms apply the action to all sub projects.
 
 The commands and usage are as follows (from 'ext help'):
 There's a tutorial available at http://nopugs.com/ext-tutorial
+There's a tutorial available at http://nopugs.com/ext-tutorial
 
 ext [OPTIONS] <command> [repository] [-b <branch>] [path]
     -g, --git                        same as '--scm git'  Uses git to checkout/export the main project
@@ -28,6 +29,7 @@ ext [OPTIONS] <command> [repository] [-b <branch>] [path]
     -t, --type TYPE                  The type of project the main project is.  For example, 'rails'.
         --scm SCM                    The SCM used to manage the main project.  For example, '--scm svn'.
     -b, --branch BRANCH              The branch you want the subproject to checkout when doing 'ext install'
+    -f, --force_removal              When doing an uninstall of a subproject, remove it's files and subfolders, too.
     -w, --workdir DIR                The working directory to execute commands from.  Use this if for some reason you
         cannot execute ext from the main project's directory (or if it's just inconvenient, such as in a script
         or in a Capistrano task)
@@ -37,26 +39,16 @@ ext [OPTIONS] <command> [repository] [-b <branch>] [path]
 
 
 Commands that apply to the main project or the .externals file:
-update_ignore, install, init, touch_emptydirs, help, upgrade_externals_file
+freeze, help, init, install, touch_emptydirs, uninstall, update_ignore, upgrade_externals_file
 
-update_ignore   Adds all paths to subprojects that are
-                registered in .externals to the ignore feature of the
-                main project.  This is automatically performed by install,
-                and so you probably only will run this if you are manually
-                maintaining .externals
-
-install         Usage: ext install <repository> [-b <branch>] [path]
-                Registers <repository> in .externals under the appropriate
-                SCM.  Checks out the project, and also adds it to the ignore
-                feature offered by the SCM of the main project.  If the SCM
-                type is not obvious from the repository URL, use the --scm,
-                --git, or --svn flags.
-
-freeze          ext freeze project [REVISION]
+freeze          Usage: ext freeze project [REVISION]
+                
                 Locks a subproject into a specific revision/branch.  If no
                 revision is supplied, the current revision/branch of the
                 project will be used.  You can specify the project by name
                 or path.
+
+help            You probably just ran this command just now.
 
 init            Creates a .externals file containing only [main]
                 It will try to determine the SCM used by the main project,
@@ -65,12 +57,29 @@ init            Creates a .externals file containing only [main]
                 isn't supported.  It just means that when using 'install'
                 that you'll want to specify the path.
 
+install         Usage: ext install <repository> [-b <branch>] [path]
+                Registers <repository> in .externals under the appropriate
+                SCM.  Checks out the project, and also adds it to the ignore
+                feature offered by the SCM of the main project.  If the SCM
+                type is not obvious from the repository URL, use the --scm,
+                --git, or --svn flags.
+
 touch_emptydirs Recurses through all directories from the
                 top and adds a .emptydir file to any empty directories it
                 comes across.  Useful for dealing with SCMs that refuse to
                 track empty directories (such as git, for example)
 
-help            You probably just ran this command just now.
+uninstall       Usage: ext uninstall [-f|--force_removal] <project>
+                Removes a subproject from being tracked by ext.  If you
+                want the files associated with this subproject deleted as well
+                (if, for example, you wish to reinstall it from a different
+                repository) then you can use the -f option to remove the files.
+
+update_ignore   Adds all paths to subprojects that are
+                registered in .externals to the ignore feature of the
+                main project.  This is automatically performed by install,
+                and so you probably only will run this if you are manually
+                maintaining .externals
 
 upgrade_externals_fileConverts the old format that stored
                 as [main][svn][git] to [<path1>][<path2>]...
@@ -107,8 +116,11 @@ co, ex, st, up
 
 co              Like checkout, but skips the main project and
                 only checks out subprojects.
+
 ex              Like export, but skips the main project.
+
 st              Like status, but skips the main project.
+
 up              Like update, but skips the main project.
 
 The externals project is copyright 2008 by Miles Georgi, nopugs.com, azimux.com
