--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 1/3/2010 Version 1.6 released
 - Fixes a problem that can occur if ext is symlinked (thanks to Olmo Maldonado)
 - Added --version command line option
+- Fixes a problem with parsing project names from git repository URLs
 
 12/20/2009
 - Fix for a bug when a subproject frozen to a revision is missing during
