--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,16 @@
-February 17, 2011 Version 1.8 released
+March 29, 20011 Version 1.0.0 released
+- Added scm_opts and <scm_name>_opts .externals file options with
+  (_co|_ex|_st|_up) suffixed versions for passing options to the underlying
+  SCM executable.
+- Some fixes to issues like recognizing svn URLs (thanks to Lane Roathe) and
+  jruby testing
+
+February 17, 2011 Version 0.1.8 released
 - Fixes a compatibility issue with jruby (thanks to Patrik Sundberg)
 - Fixes some issues with recognizing rails 3 projects and testing with
   rails 3 installed
 
-1/3/2010 Version 1.6 released
+1/3/2010 Version 0.1.6 released
 - Fixes a problem that can occur if ext is symlinked (thanks to Olmo Maldonado)
 - Added --version command line option
 - Fixes a problem with parsing project names from git repository URLs
