Fixed bug preventing "ext up" from changing the branches of subprojects as expected.
Fixed bug preventing "ext checkout -b <branch_name>" from functioning as expected.

Updating with revisions/branches should now do a fetch when using git to make sure that new tags and branches are added.

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,5 @@
 If the install fails, don't add the project to the .externals file
 Add CVS support
 Add documentation
-
-When revision is present, a fetch should still be performed on git projects.
-
-add unfreeze
-
-ext checkout -b should correctly set the branch of the main project
+Add Mercurial support
+add unfreeze feature
