Working on adding branching features to subversion managed projects.  Need to add repository field to main projects that have scm=svn.

--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,6 @@ add unfreeze feature
 fix rails3 project detection
 ext init --type=rails causes scm to be set to "rails" in .externals
 better organize tests in preparation for adding support for more SCMs
+
+Require "repository" property for main projects managed by SVN.  This is
+  necessary to facilitate branching features for subversion.
