--- a/todo.txt
+++ b/todo.txt
@@ -9,3 +9,6 @@ better organize tests in preparation for adding support for more SCMs
 
 Require "repository" property for main projects managed by SVN.  This is
   necessary to facilitate branching features for subversion.
+
+move all calls to `<scm> <cmd>....` to methods called "issue_<cmd>..."
+add exception classes
