--- a/README
+++ b/README
@@ -21,26 +21,35 @@ forms apply the action to all sub projects.
 
 The commands and usage are as follows (from 'ext help'):
 There's a tutorial available at http://nopugs.com/ext-tutorial
-There's a tutorial available at http://nopugs.com/ext-tutorial
 
 ext [OPTIONS] <command> [repository] [-b <branch>] [path]
-    -g, --git                        same as '--scm git'  Uses git to checkout/export the main project
-    -s, --svn, --subversion          same as '--scm svn'  Uses subversion to checkout/export the main project
-    -t, --type TYPE                  The type of project the main project is.  For example, 'rails'.
-        --scm SCM                    The SCM used to manage the main project.  For example, '--scm svn'.
-    -b, --branch BRANCH              The branch you want the subproject to checkout when doing 'ext install'
-    -f, --force_removal              When doing an uninstall of a subproject, remove it's files and subfolders, too.
-    -w, --workdir DIR                The working directory to execute commands from.  Use this if for some reason you
-                                     cannot execute ext from the main project's directory (or if it's just inconvenient,
-                                     such as in a script or in a Capistrano task)
-        --help                       does the same as 'ext help'  If you use this with a command
-                                     it will ignore the command and run help instead.
-        --version                    Displays the version number of externals and then exits.
-                                     Same as 'ext version'
+  -g, --git                same as '--scm git' Uses git to checkout/export the
+                           main project
+      --svn, --subversion  same as '--scm svn' Uses subversion to
+                           checkout/export the main project
+  -t, --type TYPE          The type of project the main project is. For example,
+                           'rails'.
+  -s, --scm SCM            The SCM used to manage the main project. For example,
+                           '--scm svn'.
+  -b, --branch BRANCH      The branch you want the subproject to checkout when
+                           doing 'ext install'
+  -f, --force_removal      When doing an uninstall of a subproject, remove it's
+                           files and subfolders, too.
+  -w, --workdir DIR        The working directory to execute commands from. Use
+                           this if for some reason you cannot execute ext from
+                           the main project's directory (or if it's just
+                           inconvenient, such as in a script or in a Capistrano
+                           task)
+      --help               does the same as 'ext help' If you use this with a
+                           command it will ignore the command and run help
+                           instead.
+      --version            Displays the version number of externals and then
+                           exits. Same as 'ext version'
+
 
 
 Commands that apply to the main project or the .externals file:
-freeze, help, init, install, touch_emptydirs, uninstall, update_ignore, upgrade_externals_file
+freeze, help, init, install, switch, touch_emptydirs, uninstall, update_ignore, version
 
 freeze          Usage: ext freeze project [REVISION]
 
@@ -64,6 +73,11 @@ install         Usage: ext install <repository> [-b <branch>] [path]
                 feature offered by the SCM of the main project.  If the SCM
                 type is not obvious from the repository URL, use the --scm,
                 --git, or --svn flags.
+
+switch          Usage: ext switch <branch_name>
+                Changes to the named branch <branch_name> and updates any
+                subprojects and applies any changes that have been made to the
+                .externals file.
 
 touch_emptydirs Recurses through all directories from the
                 top and adds a .emptydir file to any empty directories it
@@ -166,7 +180,33 @@ This will pass "--non-interactive --trust-certid" to all co calls dealing with
 subversion projects, regardless of which project it is.
 
 
+BRANCHES WITH SUBVERSION
+------------------------
+Subversion does not have a branch feature. Instead, subversion users use the copy
+feature to copy directories within the repository (branch), a switch command to switch the
+URL that the working directory points at (checkout), and a merge feature to merge
+directories (merge).
 
+ext handles branches in Subversion by splitting the URL given by 'svn info' into
+a repository part and a branch part.
+
+If you find yourself doing this:
+
+ext checkout svn+ssh://someserver/somepath/repository/branches/new_feature
+
+Then you almost certainly mean to do this:
+
+ext checkout svn+ssh://someserver/somepath/repository -b branches/new_feature
+
+For ext to use branch-related features with Subversion repositories, the repository
+must be known.  For subprojects this is never a problem, but for the main project,
+it's important that there is a repository field under [.] in the .externals file.
+This can be accomplished by using -b with commands like 'ext checkout' and 'ext init'
+or by manually editing the .externals file.
+
+
+Copyright Information
+---------------------
 The externals project is copyright 2008 by Miles Georgi, nopugs.com, azimux.com
 and is released under the MIT license.
 
