--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+July 17, 2012 Version 1.0.7 released
+- Fixes a bug that removes the branch from the .externals configuration
+  file when freezing a subproject managed by subversion.
+
 October 19, 2011 Version 1.0.6 released
 - Replaced some useful program output that was removed in 1.0.5
 
